<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <TextView
        android:id="@+id/text_wifi_ssid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifi_ssid_text"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/text_wifi_bssid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifi_bssid_text"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/text_wifi_strength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Average: -55dBm [-50, -55, -60]"
        android:text="@string/wifi_strength_text"
        android:textSize="14sp"/>
</LinearLayout>