<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/controls_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/list_wifi_networks">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text = "@string/map_management_text"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_new_map_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/edit_map_name_text"/>

            <Button
                android:id = "@+id/button_view_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/view_map_button_text"
                android:textAllCaps = "false"/>

            <Button
                android:id="@+id/button_create_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/create_map_button_text"
                android:textAllCaps="false"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text = "@string/active_map_text"/>

        <Spinner
            android:id = "@+id/spinner_active_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button_scan_wifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan_wifi_button_text"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/text_cooldown_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            tools:visibility="visible"
            tools:text="Next scan available in 1:55"/>

        <TextView
            android:id="@+id/text_user_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"
            tools:visibility="visible"
            tools:text="You are near: (2.0, 3.0)"/>

        <LinearLayout
            android:id="@+id/admin_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Reference Point Setup (Trilateration Anchors)"
                android:textStyle="bold"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="?attr/colorPrimary"
                android:padding="8dp"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Select Reference AP SSID:"/>


                <Spinner
                    android:id="@+id/spinner_reference_ap_selection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edit_ref_x"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:hint="Anchor X-Coord"
                        android:inputType="numberDecimal|numberSigned"/>
                    <EditText
                        android:id="@+id/edit_ref_y"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:hint="Anchor Y-Coord"
                        android:inputType="numberDecimal|numberSigned"/>
                    <EditText
                        android:id="@+id/edit_ref_rssi_1m"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:hint="RSSI @ 1m"
                        android:inputType="numberDecimal|numberSigned"/>
                </LinearLayout>

                <Button
                    android:id="@+id/button_save_reference_point"
                    android:layout_width="wrap_content"
                    android:layout_gravity="end"
                    android:layout_height="wrap_content"
                    android:text="Save as Anchor"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_coordinate_x"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/edit_coordinate_x_text"
                    android:inputType="numberDecimal|numberSigned" />

                <EditText
                    android:id="@+id/edit_coordinate_y"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/edit_coordinate_y_text"
                    android:inputType="numberDecimal|numberSigned" />
            </LinearLayout>
            <Button
                android:id="@+id/button_add_fingerprint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_point_heatmap"
                android:textAllCaps="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/select_ap_for_heatmap_export"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/spinner_network_selection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/button_export_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/export_heatmap_data"
                android:textAllCaps="false"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_wifi_networks"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/controls_scroll_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>